<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E-Cart</string>
    <string name="e_cart">E-Cart</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="edit_text_hint_email_id">Email ID</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="button_label_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="edit_text_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I agree to the <u>Terms &amp; Condition</u></string>
    <string name="button_label_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="error_message_enter_first_name">Please enter first name.</string>
    <string name="error_message_enter_last_name">Please enter last name.</string>
    <string name="error_message_enter_email_id">Please enter Email ID.</string>
    <string name="error_message_enter_password">Please enter password.</string>
    <string name="error_message_enter_confirm_password">Please enter confirm password.</string>
    <string name="error_message_password_and_confirm_password_mismatch">Password and Confirm Passowrd mismatched.</string>
    <string name="error_message_agree_terms_and_condition">Please agree the terms and condition.</string>
    <string name="validation_success">Validation Successful!</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and Email Address we\'ll send you an email to reset your password</string>
    <string name="button_label_submit">Submit</string>

    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="register_success">You are registered successfully</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>

    <string name="edit_text_hint_mobile_number">Mobile Number</string>
    <string name="radio_button_label_male">MALE</string>
    <string name="radio_button_label_female">FEMALE</string>
    <string name="button_label_save">Save</string>
    <string name="read_storage_permission_denied">Oops! Your just denied the permission for storage. You can allow it from settings.</string>
    <string name="image_selection_failed">Image Selection Failed!</string>
    <string name="error_message_enter_mobile_number">Please enter mobile number.</string>

    <string name="message_profile_update_success">Your profile is updated successfully.</string>

    <!--    <string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="label_edit">Edit</string>
    <string name="label_addresses">Addresses</string>
    <string name="button_label_logout">Logout</string>

    <string name="action_add_product">Add Product</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="edit_text_hint_product_title">Product Title</string>
    <string name="edit_text_hint_product_price">Product Price (Rs.)</string>
    <string name="edit_text_hint_product_description">Product Description</string>
    <string name="edit_text_hint_product_quantity">Product Quantity</string>

    <string name="error_message_select_product_image">Please select Product Image.</string>
    <string name="error_message_enter_product_title">Please enter Product Title.</string>
    <string name="error_message_enter_product_price">Please enter Product Price.</string>
    <string name="error_message_enter_product_description">Please enter Product Description.</string>
    <string name="error_message_enter_product_quantity">Please enter Product Quantity.</string>

    <string name="product_uploaded_success_message">Your product was uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>

    <string name="no_dashboard_items_found">No items found!</string>

    <string name="product_delete_success_message">Product has been deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="label_product_description">Product Description</string>
    <string name="label_product_details_stock_quantity">Stock Quantity</string>

    <string name="button_label_add_to_cart">ADD TO CART</string>
    <string name="button_label_go_to_cart">GO TO CART</string>

    <string name="item_added_to_cart_success_message">"Product added to your cart. "</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="label_subtotal">Subtotal</string>
    <string name="label_shipping_charge">Shipping Charge</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="button_label_checkout">CHECKOUT</string>
    <string name="action_cart">My Cart</string>

    <string name="label_out_of_stock">OUT OF STOCK</string>
    <string name="message_item_removed_successfully">Item removed successfully.</string>
    <string name="message_available_stock">Available stock is %1$s!. You cannot add more than the stock quantity.</string>

    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="_label_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_pin_code">Pin Code</string>
    <string name="hint_additional_note">Additional Note</string>
    <string name="hint_other_details">Other Details</string>
    <string name="label_home">HOME</string>
    <string name="label_office">OFFICE</string>
    <string name="label_other">OTHER</string>

    <string name="error_message_enter_full_name">Please enter full name.</string>
    <string name="error_message_enter_phone_number">Please enter phone number.</string>
    <string name="error_message_enter_address">Please enter address.</string>
    <string name="error_message_enter_pin_code">Please enter pin code.</string>
    <string name="error_message_enter_other_details">Please enter other details.</string>
    <string name="your_address_added_successful_message">Your address is added successfully.</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="button_label_update">UPDATE</string>
    <string name="message_your_address_updated_successfully">Your address is updated successfully.</string>
    <string name="message_your_address_deleted_successfully">Your address is deleted successfully.</string>
    <string name="title_select_address">SELECT ADDRESS</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_label_product_items">Product Items</string>
    <string name="checkout_label_selected_address">Selected Address</string>
    <string name="checkout_label_items_receipt">Items Receipt</string>
    <string name="label_payment_mode">Payment Mode</string>
    <string name="label_cash_on_delivery">Cash On Delivery</string>
    <string name="button_label_place_order">PLACE ORDER</string>

    <string name="no_orders_placed_yet">No orders placed yet!</string>

    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_label">Order Details</string>
    <string name="order_details_label_order_id">Order ID</string>
    <string name="order_details_label_order_date">Order Date</string>
    <string name="order_details_label_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_label_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>

    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>

</resources>